# YSFLIGHT

./: .gitignore  LICENSE  SECURITY.md  readme.md
src/: CMakeFiles  CMakeLists.txt  dependencies.txt  vcpkg.json
src/autopilot/: CMakeLists.txt  fsairshowacro.cpp  fsautopilot.cpp  fsautopilot.h  fsautopilotexperimental.cpp  fsautopilotexperimental.h  fsdefenderautopilot.cpp  fsdefenderautopilot.h  fsdogfightautopilot.cpp  fsdogfightautopilot.h  fsformationautopilot.cpp  fsformationautopilot.h  fsgroundattackautopilot.cpp  fsgroundattackautopilot.h  fsmissionautopilot.cpp  fsmissionautopilot.h  fsrefuelandtakeoff.cpp  fsrefuelandtakeoff.h
src/common/: CMakeLists.txt  fsairsound.h  fsdef.cpp  fsdef.h  fsrecord.h  fstextresource.cpp  fstextresource.h
src/config/: CMakeLists.txt  fsconfig.cpp  fsconfig.h  fsnetconfig.cpp  fsnetconfig.h  fsoption.cpp  fsoption.h
src/core/: CMakeLists.txt  fs.h  fsaibasic.cpp  fsaibasic.h  fsapplyoption.cpp  fsapplyoption.h  fsatc.cpp  fsatc.h  fsatcfileio.cpp  fsautodrive.cpp  fsautodrive.h  fschoose.cpp  fschoose.h  fscloud.cpp  fscloud.h  fscontrol.cpp  fscontrol.h  fsdialog.h  fsexistence.cpp  fsexistence.h  fsexplosion.cpp  fsexplosion.h  fsexternalconsole.h  fsfield.cpp  fsfield.h  fsgenmdl.cpp  fsgenmdl.h  fsgroundsky.h  fsguiconfigdlg.cpp  fsguiconfigdlg.h  fsguiinfltdlg.cpp  fsguiinfltdlg.h  fsguinewflightdialog.cpp  fsguinewflightdialog.h  fsguiselectiondialogbase.cpp  fsguiselectiondialogbase.h  fshud.cpp  fshud.h  fshud2.cpp  fshud2.h  (+45 more)
src/dynamics/: CMakeLists.txt  fsairproperty.cpp  fsairproperty.h  fsengine.cpp  fsengine.h  fsrealprop.cpp  fsrealprop.h
src/externalconsole/: CMakeLists.txt  fsexternalconsolecommand.h  fsinstreading.cpp  fsinstreading.h
src/filename/: CMakeLists.txt  fsfilename.cpp  fsfilename.h
src/graphics/common/: CMakeLists.txt  fsblackout.cpp  fsblackout.h  fsconsole.cpp  fsconsole.h  fsfontrenderer.cpp  fsfontrenderer.h  fsopengl.cpp  fsopengl.h  fstexturemanager.cpp  fstexturemanager.h  fsvisual.cpp  fsvisual.h  fswirefont.cpp  fswirefont.h  fswirefont_makebuf.cpp
src/graphics/d3d9/: CMakeLists.txt  fsblackoutd3d.cpp  fscloudd3d.cpp  fsd3d.cpp  fsd3d.h  fsexistenced3d.cpp  fsexplosiond3d.cpp  fsfontrendererdx.cpp  fsgroundpropertyd3d.cpp  fsgroundskyd3d.cpp  fshud2d3d.cpp  fshudd3d.cpp  fsinstpaneld3d.cpp  fsparticled3d.cpp  fsweapond3d.cpp  fsweatherd3d.cpp
src/graphics/gl/: CMakeLists.txt  fsblackoutgl.cpp  fscloudgl.cpp  fsexistencegl.cpp  fsexplosiongl.cpp  fsfontrenderergl.cpp  fsgroundpropertygl.cpp  fsgroundskygl.cpp  fshud2gl.cpp  fshudgl.cpp  fsinstpanelgl.cpp  fsopengl.cpp  fsparticlegl.cpp  fsweapongl.cpp  fsweathergl.cpp
src/graphics/gl2.0/: CMakeLists.txt  fsblackoutgl2.0.cpp  fscloudgl2.0.cpp  fsexistencegl2.0.cpp  fsexplosiongl2.0.cpp  fsfontrenderergl2.0.cpp  fsgl2.0util.h  fsgl2bitmap.cpp  fsgl2bitmap.h  fsgroundpropertygl2.0.cpp  fsgroundskygl2.0.cpp  fshud2gl2.0.cpp  fshudgl2.0.cpp  fsinstpanelgl2.0.cpp  fsopengl2.0.cpp  fsopengl2.0.h  fsparticlegl2.0.cpp  fsweapongl2.0.cpp  fsweathergl2.0.cpp
src/graphics/null/: CMakeLists.txt  fsblackoutnownd.cpp  fscloudnownd.cpp  fsexistencenownd.cpp  fsexplosionnownd.cpp  fsfontrenderernownd.cpp  fsgroundpropertynownd.cpp  fsgroundskynownd.cpp  fshud2nownd.cpp  fshudnownd.cpp  fsinstpanelnownd.cpp  fsnownd.cpp  fsparticlenownd.cpp  fsweaponnownd.cpp  fsweathernownd.cpp
src/gui/: CMakeLists.txt  fsguicommondialog.cpp  fsguicommondialog.h  fsguimaincanvas.cpp  fsguimaincanvas.h  fsguinetdialog.cpp  fsguinetdialog.h  fsguisiminfodialog.cpp  fsguisiminfodialog.h  fsmenu.cpp  fsmenu.h  fsmenu_file.cpp  fsmenu_net.cpp  fsmenu_option.cpp  fsmenu_sim.cpp  fsmenu_util.cpp
src/main/: CMakeLists.txt  fsmain.cpp  hotasrc.rc  resource.h
src/main_consvr/: CMakeLists.txt  fsconmenu.cpp  fsconmenu.h  fsmainsvr.cpp  hotasrc.rc  html1.htm
src/main_demoOnly/: CMakeLists.txt  fsmain.cpp
src/pathplanning/: CMakeLists.txt  fspathplanning.h  fsthreatavoidingpath.cpp  fsthreatavoidingpath.h
src/platform/android/: CMakeLists.txt  fsplatform.cpp
src/platform/common/: CMakeLists.txt  fswindow.cpp  fswindow.h
src/platform/linux/: CMakeLists.txt  fsairsound.cpp  fsairsound.cpp.old  fsglx.cpp  fsglx.cpp.old  fsnullnetwork.cpp  prepareglx2.bat  ysnullsocket.cpp  ysoss.cpp.old  ysoss.h.old  ysscenerynownd.cpp
src/platform/macosx/: APPL.icns  CMakeLists.txt  Info.plist  fsairsound.cpp  fsmacosx.cpp  fsmacosx_alert.h  fsmacosx_alert.m  fsmacosxfile.h  (+3 more)
src/scenery/: CMakeLists.txt  sescenery.cpp  sescenery.h  ysgltess.cpp  ysgltess.h  ysscenery.cpp  ysscenery.h  yssceneryd3d.cpp  ysscenerygl.cpp  ysscenerygl2.0.cpp  yssceneryio.cpp  yssceneryio.h  ysscenerynownd.cpp  yssync_module.cpp  yssync_module.h
src/sounddll/: fsairsoundenum.h
src/testscripts/: acro_demo.txt  aircraft_sample.txt  batch_test.py  batch_test_32.py  batch_test_addon.py  batch_test_allaircraft.py  batch_test_allaircraft_light.py  batch_test_allfield.py  batch_test_allfield_light.py  batch_test_before_release.py  batch_test_general.py  batch_test_network.py  batch_test_unicode_path.py  common.py  config_reset.txt  field_sample.txt  file_location.py  install_addon.py  landing.txt  language.txt  list.py  menu_network_client1.txt  menu_network_client2.txt  menu_network_client3.txt  menu_network_client_shootdown1.txt  menu_network_client_shootdown2.txt  menu_sim.txt  misc_config.txt  netconfig_client_enable_recording.txt  option_demo_off.txt  option_demo_on.txt  option_reset.txt  option_sound_off.txt  option_sound_on.txt  readme.txt  screen_mode.txt  smoke_particle.txt  unicode_file_name.txt  weapon_record.txt
src/ui/: CMakeLists.txt  fscmdparaminfo.cpp  fscmdparaminfo.h  fsrunloop.cpp  fsrunloop.h  fsscript.cpp  fsscript.h
src/util/: CMakeLists.txt  fsbase.cpp  fsbase.h  fsnetutil.h  fsutil.cpp  fsutil.h
src/vehicle/: CMakeLists.txt  fsairplaneproperty.cpp  fsairplaneproperty.h  fsgroundproperty.cpp  fsgroundproperty.h  fsnavaid.cpp  fsnavaid.h  fsproperty.cpp  fsproperty.h  fsvehicleproperty.cpp  fsvehicleproperty.h
src/voicedll/: fsvoiceenum.h
src/ysjoystick/: makepackage.py
(+809 files in other folders)
