set(TARGET_NAME ysflight_core)
add_library(${TARGET_NAME} 
	fsaibasic.cpp
	fsatc.cpp
	fsatcfileio.cpp
	fsautodrive.cpp
	fschoose.cpp
	fscloud.cpp
	fscontrol.cpp
	fsexistence.cpp
	fsexplosion.cpp
	fsfield.cpp
	fsgenmdl.cpp
	fsguiconfigdlg.cpp
	fsguiinfltdlg.cpp
	fsguinewflightdialog.cpp
	fsguiselectiondialogbase.cpp
	fshud.cpp
	fshud2.cpp
	fsinstpanel.cpp
	fslattice.cpp
	fsnetwork.cpp
	fsparticle.cpp
	fspersona.cpp
	fspluginmgr.cpp
	fssiminfo.cpp
	fssimulation.cpp
	fssimulationdemomode.cpp
	fssimulationfileio.cpp
	fsstdout.cpp
	fssubmenu.cpp
	fsweapon.cpp
	fsweather.cpp
	fsworld.cpp
	fsapplyoption.cpp
	fsradar.cpp
	fssimextension.cpp
	fssimextension_racing.cpp
	fssimextension_endurance.cpp
	fssimextension_intercept.cpp
	fssimextension_closeairsupport.cpp
	fssimextension_groundtoair.cpp
	fs.h
	fsaibasic.h
	fsatc.h
	fsautodrive.h
	fschoose.h
	fscloud.h
	fscontrol.h
	fsdialog.h
	fsexistence.h
	fsexplosion.h
	fsexternalconsole.h
	fsfield.h
	fsgenmdl.h
	fsgroundsky.h
	fsguiconfigdlg.h
	fsguiinfltdlg.h
	fsguiselectiondialogbase.h
	fshud.h
	fshud2.h
	fsinstpanel.h
	fslattice.h
	fsmissiongoal.h
	fsnetwork.h
	fsguinewflightdialog.h
	fsparticle.h
	fspersona.h
	fsplugin.h
	fspluginmgr.h
	fsprintf.h
	fssiminfo.h
	fssimulation.h
	fsstdout.h
	fssubmenu.h
	fsweapon.h
	fsweather.h
	fsworld.h
	fsapplyoption.h
	fsradar.h
	fssimextension.h
	fssimextension_racing.h
	fssimextension_endurance.h
	fssimextension_intercept.h
	fssimextension_closeairsupport.h
	fssimextension_groundtoair.h
)
target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(${TARGET_NAME} 
	geblkernel
	geblgl
	ysflight_common
	ysflight_config
	ysflight_platform_common
	ysflight_pathplanning 
	ysflight_externalconsole 
	ysflight_autopilot 
	ysflight_dynamics
	ysflight_vehicle 
	ysflight_util
	yssocket
	ysflight_graphics_common
	fsguilib
	fsguifiledialog
	ysbitmap
	ysbitmapfont
	ysfontrenderer
	ysport
	ysscenery_dnm
	ystexturemanager
	ysflight_filename
	ysclass
	ysclass11
	ysglcpp
)
